Ajout de la fonctionnalité d'ajout d'épreuve via l'application